--- a/Docker-Part/dockerfile
+++ b/Docker-Part/dockerfile
@@ -1,12 +1,9 @@
-# Build stage
-FROM eclipse-temurin:21-jdk-jammy as builder
-WORKDIR /app
-COPY . .
-RUN ./mvnw clean package
-
-# Runtime stage
 FROM eclipse-temurin:21-jre-jammy
+
 WORKDIR /app
-COPY --from=builder /app/target/spring-petclinic-*.jar app.jar
+
+COPY app.jar app.jar
+
 EXPOSE 8888
+
 ENTRYPOINT ["java", "-jar","-Dspring.profiles.active=mysql", "app.jar"]
