--- a/Jenkins-Part/Jenkinsfile
+++ b/Jenkins-Part/Jenkinsfile
@@ -93,7 +93,7 @@ pipeline {
             steps {
                 dir('Docker-Part') {
                     echo "Running docker-compose..."
-                    sh 'docker-compose up -d'
+                    sh 'docker compose up -d'
                 }
             }
         }
