--- a/Ansible-Part/ansible.cfg
+++ b/Ansible-Part/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 remote_user = ubuntu
 inventory = ./inventory
-private_key = ~/.ssh/ansible-key
+private_key_file = ~/.ssh/ansible-key.pem
 
 [privilege_escalation]
 become = true
-become_ask_pass = true
+become_method = sudo
