--- a/Ansible-Part/roles/docker/tasks/main.yml
+++ b/Ansible-Part/roles/docker/tasks/main.yml
@@ -1,4 +1,7 @@
+#SPDX-License-Identifier: MIT-0
 ---
+# tasks file for docker
+
 - name: Update repositories cache and install "ca-certificates" and "curl" packages
   ansible.builtin.apt:
     name: "{{ item }}"
@@ -49,3 +52,10 @@
     groups: docker
     append: yes
   when: check_docker.changed == true
+
+
+- name: Enable docker service
+  ansible.builtin.service:
+    name: docker
+    state: started
+    enabled: yes
